chore: remove duplicated env and restructure for better readability

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,18 +1,24 @@
+COMPOSE_FILE=docker-compose.dev.yaml
+
 DYO_VERSION=local
+COOKIE_SECRET=this_is_a_very_secret_cookie
+
+# Postgres passwords
 CRUX_POSTGRES_PASSWORD=crux
 KRATOS_POSTGRES_PASSWORD=kratos
 
+# Kratos
 KRATOS_DEV=true
 KRATOS_LOG_LEVEL=trace
 KRATOS_LOG_LEAK_SENSITIVE_VALUES=true
-COOKIE_SECRET=this_is_a_very_secret_cookie
+
+# SMTP Configs
 SMTP_USER=test
 SMTP_PASSWORD=test
 SMTP_URL=mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
 
-COMPOSE_FILE=docker-compose.dev.yaml
-
-# MacOS dependencies - more info in ./auth/README.md
+# MacOS dependencies
+# https://docs.docker.com/desktop/networking/#i-want-to-connect-from-a-container-to-a-service-on-the-host
 KRATOS_URL=http://host.docker.internal:8000/kratos
 KRATOS_ADMIN_URL=http://host.docker.internal:9434
 TRAEFIK_HOST=host.docker.internal
