--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -1,9 +1,15 @@
 CRUX_ADDRESS=172.17.0.1:5001
 CRUX_INSECURE=true
+
 KRATOS_URL=http://172.17.0.1:8000/kratos
 KRATOS_ADMIN_URL=http://172.17.0.1:9434
+
 LOG_LEVEL=trace
+
+# Google recaptcha config
 DISABLE_RECAPTCHA=true
 RECAPTCHA_SITE_KEY=<public_recaptcha_site_key>
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
+
+# Playwright test config
 E2E_BASE_URL=http://172.17.0.1:8000
