--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,24 +1,24 @@
+# Application configs
 KRATOS_ADMIN_URL=http://172.17.0.1:9434
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://172.17.0.1:8000
 CRUX_ADDRESS=172.17.0.1:5000
-GRPC_AGENT_INSTALL_SCRIPT_INSECURE=true
-
 CRUX_DOMAIN=DNS:localhost
 CRUX_DOMAIN_ALTS=IP:172.17.0.1
 
 JWT_SECRET=jwt-secret-token
 
-GRPC_AGENT_PORT=5000
-GRPC_AGENT_INSECURE=true
-
-GRPC_API_PORT=5001
-GRPC_API_INSECURE=true
-
 LOG_LEVEL=verbose
 K8S_LOCAL_MANIFEST=false
 
+# GRPC secure and port config
+GRPC_AGENT_INSTALL_SCRIPT_INSECURE=true
+GRPC_AGENT_PORT=5000
+GRPC_AGENT_INSECURE=true
+GRPC_API_PORT=5001
+GRPC_API_INSECURE=true
+
+# Email service config
 SENDGRID_KEY=<sg_key>
 FROM_EMAIL=<email_address>
 FROM_NAME="dyrector.io Platform"
-CRUX_UI_URL=http://172.17.0.1:8000
