--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,8 +1,9 @@
 # Application configs
 KRATOS_ADMIN_URL=http://172.17.0.1:9434
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
+POSTGRES_PASSWORD=crux
 CRUX_UI_URL=http://172.17.0.1:8000
-CRUX_ADDRESS=172.17.0.1:5000
+CRUX_AGENT_ADDRESS=172.17.0.1:5000
 CRUX_DOMAIN=DNS:localhost
 CRUX_DOMAIN_ALTS=IP:172.17.0.1
 
