fix: primsa containerConfig defaults and dagent envs

--- a/agent/cmd/dagent/.env.example
+++ b/agent/cmd/dagent/.env.example
@@ -15,6 +15,7 @@ READ_HEADER_TIMEOUT=15s
 REGISTRY=index.docker.io
 REGISTRY_PASSWORD=
 REGISTRY_USERNAME=
+SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
 
 # DAgent specific options
 AGENT_CONTAINER_NAME=dagent
