--- a/agent/cmd/crane/.env.example
+++ b/agent/cmd/crane/.env.example
@@ -16,6 +16,8 @@ READ_HEADER_TIMEOUT=15s
 REGISTRY=index.docker.io
 REGISTRY_PASSWORD=
 REGISTRY_USERNAME=
+SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
+
 
 # crane specific options
 CRANE_GEN_TCP_INGRESS_MAP=
