feat: add secret volume to k8s manifests

--- a/agent/manifest/kubernetes/deployment.yaml
+++ b/agent/manifest/kubernetes/deployment.yaml
@@ -29,3 +29,11 @@ spec:
           envFrom:
             - configMapRef:
                 name: crane-config
+          volumeMounts:
+            - name: agent-data
+              mountPath: /srv/dagent
+      volumes:
+      - name: agent-data
+        persistentVolumeClaim:
+          claimName: agent-data
+
