--- a/web/crux-ui/docker-compose.yaml
+++ b/web/crux-ui/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     environment:
       - TZ=Europe/Budapest
       - KRATOS_URL=$KRATOS_URL
-      - CRUX_ADDRESS=$CRUX_ADDRESS
+      - CRUX_API_ADDRESS=$CRUX_API_ADDRESS
       - RECAPTCHA_SECRET_KEY=$RECAPTCHA_SECRET_KEY
       - RECAPTCHA_SITE_KEY=$RECAPTCHA_SITE_KEY
     restart: unless-stopped
