fix: cli versioning, make version package public

--- a/agent/Makefile
+++ b/agent/Makefile
@@ -8,9 +8,9 @@ BUILD_TIMESTAMP="$(shell date -u +"%Y-%m-%dT%H:%M:%SZ" | tr -d "[:blank:]")"
 
 agent_version=$(or $(VCS_VERSION),$(AGENT_HASH))
 
-LDFLAGS := -ldflags "-X '${PACKAGE}/internal/version.Version=${VCS_VERSION}'\
-  -X '${PACKAGE}/internal/version.BuildTimestamp=${BUILD_TIMESTAMP}'\
-  -X '${PACKAGE}/internal/version.CommitHash=${AGENT_HASH}'\
+LDFLAGS := -ldflags "-X '${PACKAGE}/pkg/version.Version=${VCS_VERSION}'\
+  -X '${PACKAGE}/pkg/version.BuildTimestamp=${BUILD_TIMESTAMP}'\
+  -X '${PACKAGE}/pkg/version.CommitHash=${AGENT_HASH}'\
   -extldflags '-static'"
 
 # default tag is latest for building
