--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -29,13 +29,13 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:ci": "jest --config ./jest.config.js --collectCoverage --coverageDirectory=\"./coverage\" --ci --reporters=default --reporters=jest-junit --watchAll=false",
+    "test:crux": "npm run docker:up && npx prisma migrate deploy && jest -i && npm docker:down",
     "ts-node": "ts-node --compiler-options { \"module\": \"CommonJS\"}",
     "database:up": "docker-compose -f docker-compose.database.yaml up -d",
     "database:down": "docker-compose -f docker-compose.database.yaml down",
-    "test:crux": "npm run docker:up && npx prisma migrate deploy && jest -i && npm docker:down",
     "prismagen": "prisma generate",
-    "compodoc": "compodoc -p tsconfig.doc.json --theme stripe",
-    "demo-seed": "npx ts-node prisma/seeds/demo-seeder.ts"
+    "seed:microservice": "npx ts-node prisma/seeds/demo-seeder.ts",
+    "seed:mock": "npx ts-node prisma/seeds/seeder.ts",
   },
   "prisma": {
     "seed": "ts-node prisma/seeds/seeder.ts",
@@ -76,7 +76,7 @@
     "@nestjs/testing": "^9.0.8",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.5",
+    "@types/node": "^18.8.0",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
@@ -92,7 +92,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
-    "prisma": "4.1.1",
+    "prisma": "4.4.0",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "ts-proto": "1.125.0",
