feat: replace sendgrid with nodemailer

--- a/.github/workflows/web-crux.yml
+++ b/.github/workflows/web-crux.yml
@@ -16,6 +16,9 @@ env:
   KRATOS_URL: http://192.168.1.30:8000/kratos
   CRUX_UI_URL: http://172.17.0.1:8000
   TIME_ZONE: Europe/Budapest
+  SMTP_URI: smtps://test:test@172.17.0.1:1025/?skip_ssl_verify=true&legacy_ssl=true
+  GRPC_API_INSECURE: true
+  GRPC_AGENT_INSECURE: true
   # Default GitHub variables
   CRUX_VERSION: ${{ github.sha }}
   CRUX_IMAGE_TAG: ${{ github.ref_name }}
@@ -23,7 +26,6 @@ env:
   POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
   POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
   POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-  SENDGRID_KEY: ${{ secrets.SENDGRID_KEY }}
   FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
   FROM_NAME: ${{ secrets.FROM_NAME }}
 
