--- a/web/.env.example
+++ b/web/.env.example
@@ -13,9 +13,7 @@ KRATOS_LOG_LEVEL=trace
 KRATOS_LOG_LEAK_SENSITIVE_VALUES=true
 
 # SMTP Configs
-SMTP_USER=test
-SMTP_PASSWORD=test
-SMTP_URL=mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
+SMTP_URI=smtps://test:test@mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
 
 # MacOS dependencies
 # https://docs.docker.com/desktop/networking/#i-want-to-connect-from-a-container-to-a-service-on-the-host
