--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -20,6 +20,6 @@ GRPC_API_PORT=5001
 GRPC_API_INSECURE=true
 
 # Email service config
-SENDGRID_KEY=<sg_key>
+SMTP_URI=smtps://test:test@172.17.0.1:1025/?skip_ssl_verify=true&legacy_ssl=true
 FROM_EMAIL=<email_address>
 FROM_NAME="dyrector.io Platform"
