--- a/web/docker-compose.dev.yaml
+++ b/web/docker-compose.dev.yaml
@@ -62,7 +62,7 @@ services:
       - LOG_LEVEL=${KRATOS_LOG_LEVEL}
       - LOG_LEAK_SENSITIVE_VALUES=${KRATOS_LOG_LEAK_SENSITIVE_VALUES}
       - SECRETS_COOKIE=${COOKIE_SECRET}
-      - COURIER_SMTP_CONNECTION_URI=smtps://${SMTP_USER}:${SMTP_PASSWORD}@${SMTP_URL}
+      - COURIER_SMTP_CONNECTION_URI=${SMTP_URI}
     restart: unless-stopped
     command: serve -c /etc/config/kratos/kratos.yaml --watch-courier
     labels:
@@ -80,6 +80,7 @@ services:
     restart: unless-stopped
     image: oryd/mailslurper:latest-smtps
     ports:
+      - 1025:1025 
       - 4436:4436
       - 4437:4437
     networks:
