fix: smtp env variables

--- a/web/ci.env
+++ b/web/ci.env
@@ -5,9 +5,7 @@ KRATOS_POSTGRES_PASSWORD=kratos
 KRATOS_DEV=true
 KRATOS_LOG_LEVEL=trace
 KRATOS_LOG_LEAK_SENSITIVE_VALUES=true
-SMTP_USER=test
-SMTP_PASSWORD=test
-SMTP_URL=mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
+SMTP_URI=mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
 
 CRUX_INSECURE=true
 KRATOS_URL=http://172.17.0.1:8000/kratos
@@ -26,7 +24,6 @@ POSTGRES_PASSWORD=crux
 JWT_SECRET=secret
 GRPC_AGENT_INSTALL_SCRIPT_INSECURE=true
 
-SENDGRID_KEY=sgkey
 FROM_EMAIL=noreply@dyrector.io
 FROM_NAME=dyrector.io Platform
 CRUX_UI_URL=http://172.17.0.1:8000
