--- a/web/ci.env
+++ b/web/ci.env
@@ -5,7 +5,7 @@ KRATOS_POSTGRES_PASSWORD=kratos
 KRATOS_DEV=true
 KRATOS_LOG_LEVEL=trace
 KRATOS_LOG_LEAK_SENSITIVE_VALUES=true
-SMTP_URI=mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
+SMTP_URI=smtps://test:test@mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
 
 CRUX_INSECURE=true
 KRATOS_URL=http://172.17.0.1:8000/kratos
