--- a/.github/workflows/web-crux-ui.yml
+++ b/.github/workflows/web-crux-ui.yml
@@ -66,7 +66,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup containers
-      working-directory: web
+      working-directory: web/crux-ui
       run: |
         docker network create crux-intranet
         ./setup_e2e_env.sh
