--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -8,8 +8,13 @@ LOG_LEVEL=trace
 
 # Google recaptcha config
 DISABLE_RECAPTCHA=true
+# required only when rechaptcha is enabled
 RECAPTCHA_SITE_KEY=<public_recaptcha_site_key>
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
-# Playwright test config
+# Playwright test config (for e2e tests)
 E2E_BASE_URL=http://172.17.0.1:8000
+
+# docker hub proxy (optional)
+HUB_PROXY_URL=http://<proxy url>
+HUB_PROXY_TOKEN=<proxy token>
