--- a/.github/workflows/web-crux-ui.yml
+++ b/.github/workflows/web-crux-ui.yml
@@ -55,7 +55,7 @@ jobs:
     container:
       image: dyrectorio/playwright:1.26.0-alpha-aug-23-2022
       volumes:
-        - /var/run/docker.sock:/var/run/docker.
+        - /var/run/docker.sock:/var/run/docker
       ports:
         - 3000:3000 # crux-ui
         - 5000:5000 # crux-agent
@@ -66,7 +66,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup containers
-      working-directory: web
+      working-directory: web/crux-ui
       run: |
         docker network create crux-intranet
         ./setup_e2e_env.sh
@@ -81,15 +81,16 @@ jobs:
 
     - name: Run tests
       working-directory: web
+      env:
+        HUB_PROXY_URL: ${{ secrets.HUB_PROXY_URL }}
+        HUB_PROXY_TOKEN: ${{ secrets.HUB_PROXY_TOKEN }}
       run: |
         cd crux
         npm run start:prod & 
         cd ../crux-ui
-        echo HUB_PROXY_URL=${{ secrets.HUB_PROXY_URL }} >> .env
-        echo HUB_PROXY_URL=${{ secrets.HUB_PROXY_TOKEN }} >> .env
         npm i
-        npm run build
         npm run disable-telemetry
+        npm run build
         npx playwright install
         npm run test:e2e
 
