--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -4,6 +4,10 @@ on:
     paths:
       - cli/**
       - .github/workflows/cli.yml
+  pull_request:
+    paths:
+      - cli/**
+      - .github/workflows/cli.yml
 
 permissions:
   contents: read
