chore(ci): workflow names and change path

--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -1,9 +1,9 @@
-name: cli
+name: golang
 on:
   push:
     paths:
       - golang/**
-      - .github/workflows/cli.yml
+      - .github/workflows/golang.yml
 
 permissions:
   contents: read
