--- a/.github/workflows/web-crux-ui.yml
+++ b/.github/workflows/web-crux-ui.yml
@@ -1,6 +1,9 @@
 name: web-crux-ui
 on:
   push:
+    branches:
+      - develop
+      - main
     paths:
       - web/crux-ui/**
       - .github/workflows/web-crux-ui.yml
