fix: port changes in webb and cli log improvement

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,5 +1,5 @@
 # Application configs
-KRATOS_ADMIN_URL=http://172.17.0.1:9434
+KRATOS_ADMIN_URL=http://localhost:4434
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
 POSTGRES_PASSWORD=crux
 CRUX_UI_URL=http://172.17.0.1:8000
