fix: port changes in webb and cli log improvement (#303)

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,11 +1,11 @@
 # Application configs
-KRATOS_ADMIN_URL=http://172.17.0.1:9434
+KRATOS_ADMIN_URL=http://localhost:4434
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
 POSTGRES_PASSWORD=crux
-CRUX_UI_URL=http://172.17.0.1:8000
-CRUX_AGENT_ADDRESS=172.17.0.1:5000
+CRUX_UI_URL=http://localhost:8000
+CRUX_AGENT_ADDRESS=localhost:5000
 CRUX_DOMAIN=DNS:localhost
-CRUX_DOMAIN_ALTS=IP:172.17.0.1
+CRUX_DOMAIN_ALTS=IP:localhost
 
 JWT_SECRET=jwt-secret-token
 
@@ -20,6 +20,6 @@ GRPC_API_PORT=5001
 GRPC_API_INSECURE=true
 
 # Email service config
-SMTP_URI=smtps://test:test@172.17.0.1:1025/?skip_ssl_verify=true&legacy_ssl=true
+SMTP_URI=smtps://test:test@localhost:1025/?skip_ssl_verify=true&legacy_ssl=true
 FROM_EMAIL=<email_address>
 FROM_NAME="dyrector.io Platform"
