--- a/web/kratos/.env.example
+++ b/web/kratos/.env.example
@@ -1,3 +1,3 @@
-KRATOS_URL=http://172.17.0.1:8000/kratos
-KRATOS_ADMIN_URL=http://172.17.0.1:9434
-CRUX_UI_URL=http://172.17.0.1:8000
+KRATOS_URL=http://localhost:8000/kratos
+KRATOS_ADMIN_URL=http://localhost:4434
+CRUX_UI_URL=http://localhost:8000
