fix(crux): image build

--- a/web/crux/Dockerfile
+++ b/web/crux/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 
 COPY ./package.json ./package-lock.json ./tsconfig.build.json ./tsconfig.json ./
 COPY ./prisma ./prisma
+COPY ./templates ./templates
 COPY ./src ./src
 
 RUN npm ci --no-fund && npm run prismagen
