feat(agent): #244, crane init for private-key generate on k8s

--- a/golang/Makefile
+++ b/golang/Makefile
@@ -50,6 +50,12 @@ down: ##
 go-crane: ##
 	air --build.cmd "" --build.bin "cd cmd/crane && go run ."
 
+.PHONY: go-crane-init
+go-crane-init: ##
+	cd cmd/crane && \
+	go run . init ; \
+	cd -
+
 .PHONY: go-dagent
 go-dagent: ##
 	air --build.cmd "" --build.bin "cd cmd/dagent && go run ."
