--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -15,8 +15,6 @@ READ_HEADER_TIMEOUT=15s
 REGISTRY=index.docker.io
 REGISTRY_PASSWORD=
 REGISTRY_USERNAME=
-SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
-
 
 # crane specific options
 CRANE_GEN_TCP_INGRESS_MAP=
@@ -27,4 +25,6 @@ FORCE_ON_CONFLICTS=true
 KEY_ISSUER=co.dyrector.io/issuer
 KUBECONFIG=
 TEST_TIMEOUT=15s
+SECRET_NAME=dyrectorio-secret
+SECRET_NAMESPACE=dyrectorio
 
