fix: traefik container start function

--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -15,6 +15,6 @@ RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 # Playwright test config (for e2e tests)
 E2E_BASE_URL=http://localhost:8000
 
-# docker hub proxy (optional)
-HUB_PROXY_URL=http://<proxy url>
-HUB_PROXY_TOKEN=<proxy token>
+# Docker HUB Proxy (optional)
+# HUB_PROXY_URL=http://<proxy_url>
+# HUB_PROXY_TOKEN=<proxy_token>
