--- a/golang/cmd/crane/.env.example
+++ b/golang/cmd/crane/.env.example
@@ -5,7 +5,6 @@ DEFAULT_LIMITS_MEMORY=128Mi
 DEFAULT_REQUESTS_CPU=50m
 DEFAULT_REQUESTS_MEMORY=64Mi
 DEFAULT_VOLUME_SIZE=1G
-GRPC_INSECURE=true
 # GRPC_TOKEN=
 IMPORT_CONTAINER_IMAGE=rclone/rclone:1.57.0
 INGRESS_ROOT_DOMAIN=
@@ -15,6 +14,8 @@ READ_HEADER_TIMEOUT=15s
 REGISTRY=index.docker.io
 REGISTRY_PASSWORD=
 REGISTRY_USERNAME=
+SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
+DEBUG=true
 
 # crane specific options
 CRANE_GEN_TCP_INGRESS_MAP=
