--- a/golang/cmd/dagent/.env.example
+++ b/golang/cmd/dagent/.env.example
@@ -5,7 +5,6 @@ DEFAULT_LIMITS_MEMORY=128Mi
 DEFAULT_REQUESTS_CPU=50m
 DEFAULT_REQUESTS_MEMORY=64Mi
 DEFAULT_VOLUME_SIZE=1G
-GRPC_INSECURE=true
 # GRPC_TOKEN=jwt
 IMPORT_CONTAINER_IMAGE=rclone/rclone:1.57.0
 INGRESS_ROOT_DOMAIN=
@@ -14,6 +13,8 @@ READ_HEADER_TIMEOUT=15s
 REGISTRY=index.docker.io
 REGISTRY_PASSWORD=
 REGISTRY_USERNAME=
+SECRET_PRIVATE_KEY_FILE=/path/to/secret.key
+DEBUG=true
 
 # DAgent specific options
 AGENT_CONTAINER_NAME=dagent
