--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -3,23 +3,21 @@ KRATOS_ADMIN_URL=http://localhost:4434
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
 POSTGRES_PASSWORD=crux
 CRUX_UI_URL=http://localhost:8000
-CRUX_AGENT_ADDRESS=localhost:5000
-CRUX_DOMAIN=DNS:localhost
-CRUX_DOMAIN_ALTS=IP:localhost
+# podman has different alias host.containers.local:5000
+# for local development replace this with localhost:5000
+CRUX_AGENT_ADDRESS=host.docker.internal:5000
 
 JWT_SECRET=jwt-secret-token
 
 LOG_LEVEL=verbose
 K8S_LOCAL_MANIFEST=false
 
-# GRPC secure and port config
-GRPC_AGENT_INSTALL_SCRIPT_INSECURE=true
 GRPC_AGENT_PORT=5000
-GRPC_AGENT_INSECURE=true
 GRPC_API_PORT=5001
-GRPC_API_INSECURE=true
 
 # Email service config
 SMTP_URI=smtps://test:test@localhost:1025/?skip_ssl_verify=true&legacy_ssl=true
 FROM_EMAIL=<email_address>
 FROM_NAME="dyrector.io Platform"
+
+NODE_ENV=development
