--- a/.github/workflows/web-crux.yml
+++ b/.github/workflows/web-crux.yml
@@ -45,7 +45,9 @@ jobs:
       run:
         working-directory: ${{ env.WORKING_DIRECTORY }}
     container:
-      image: node:17.1-alpine
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16-2
+      volumes:
+        - /var/run/docker.sock:/var/run/docker
     outputs:
       tag: ${{ steps.settag.outputs.tag }}
       version: ${{ steps.settag.outputs.version }}
@@ -53,8 +55,14 @@ jobs:
     - name: Checkout the repository
       uses: actions/checkout@v3
 
+
     - name: Install dependencies
       run: npm ci --arch=x64 --platform=linuxmusl --cache .npm --prefer-offline --no-fund
+
+    - name: Protogen
+      working-directory: ./
+      run: |
+        ls -l protobuf/proto && make proto-crux
 
     - name: Linting the code
       run: npm run lint
